# interativa-sgp-notifier

./: .dockerfile  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  scheduler.py
app/integrations/: sgp_client.py  telegram_client.py
app/services/: occurrence_service.py
app/utils/: formatter.py
